# gnome-user-docs

./: configure.ac  mallard2spreadsheet.py
.tx/: config
debian/: changelog  control  control.in  copyright  lintian-overrides  rules
debian/patches/: Add-missing-figures.patch  drop-experimental-style-for-prefs.page.patch  series
debian/upstream/: metadata
gnome-help/: Makefile.am  gnome-help.pot
gnome-help/C/: a11y-bouncekeys.page  a11y-braille.page  a11y-contrast.page  a11y-dwellclick.page  a11y-font-size.page  a11y-icon.page  a11y-locate-pointer.page.stub  a11y-mag.page  a11y-right-click.page  a11y-screen-reader.page  a11y-slowkeys.page  a11y-stickykeys.page  a11y-visualalert.page  a11y.page  about-this-guide.page  accounts-add.page  accounts-create.page  accounts-disable-service.page  accounts-remove.page  app-banshee.page.stub  app-cheese.page.stub  app-evolution-setup.page.stub  app-fspot.page.stub  app-pitivi.page.stub  app-rhythmbox.page.stub  app-shotwell.page.stub  app-totem.page.stub  backup-check.page  backup-frequency.page  backup-how.page  backup-restore.page  backup-thinkabout.page  backup-what.page  backup-where.page  backup-why.page  bluetooth-connect-device.page  bluetooth-problem-connecting.page  bluetooth-remove-connection.page  bluetooth-send-file.page  bluetooth-turn-on-off.page  (+270 more)
gnome-help/C/templates/games/: README  controls-changing.page.stub  controls.page.stub  gameplay.page.stub  multiplayer.page.stub  strategy.page.stub  tips.page.stub
gnome-help/ar/: ar.po
gnome-help/as/: as.po
gnome-help/bn/: bn.po
gnome-help/ca/: ca.po
gnome-help/cs/: cs.po
gnome-help/da/: da.po
gnome-help/de/: de.po
gnome-help/el/: el.po
gnome-help/es/: es.po
gnome-help/fa/: fa.po
gnome-help/fi/: fi.po
gnome-help/fil/: fil.po
gnome-help/fr/: fr.po
gnome-help/gl/: gl.po
gnome-help/gu/: gu.po
gnome-help/he/: he.po
gnome-help/hi/: hi.po
gnome-help/hr/: hr.po
gnome-help/hu/: hu.po
gnome-help/id/: id.po
gnome-help/it/: it.po
gnome-help/ja/: ja.po
gnome-help/kn/: kn.po
gnome-help/ko/: ko.po
gnome-help/lt/: lt.po
gnome-help/lv/: lv.po
gnome-help/mr/: mr.po
gnome-help/nl/: nl.po
gnome-help/pa/: pa.po
gnome-help/pl/: pl.po
gnome-help/pt/: pt.po
gnome-help/pt_BR/: pt_BR.po
gnome-help/ro/: ro.po
gnome-help/ru/: ru.po
gnome-help/sl/: sl.po
gnome-help/sr/: sr.po
gnome-help/sr@latin/: sr@latin.po
gnome-help/sv/: sv.po
gnome-help/ta/: ta.po
gnome-help/te/: te.po
gnome-help/th/: th.po
gnome-help/tr/: tr.po
gnome-help/uk/: uk.po
gnome-help/vi/: vi.po
gnome-help/zh/: zh.po
gnome-help/zh_CN/: zh_CN.po
gnome-help/zh_TW/: zh_TW.po
system-admin-guide/C/: desktop-favorite-applications.page  keyboard-layout.page
