@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = gnome-help

HELP_MEDIA = \
	figures/audio-volume-high-symbolic.svg \
	figures/audio-volume-low-symbolic.svg \
	figures/audio-volume-medium-symbolic.svg \
	figures/audio-volume-muted-symbolic.svg \
	figures/battery-caution-charging-symbolic.svg \
	figures/battery-caution-symbolic.svg \
	figures/battery-empty-charging-symbolic.svg \
	figures/battery-empty-symbolic.svg \
	figures/battery-full-charged-symbolic.svg \
	figures/battery-full-charging-symbolic.svg \
	figures/battery-full-symbolic.svg \
	figures/battery-good-charging-symbolic.svg \
	figures/battery-good-symbolic.svg \
	figures/battery-low-charging-symbolic.svg \
	figures/battery-low-symbolic.svg \
	figures/battery-missing-symbolic.svg \
	figures/bluetooth-active-symbolic.svg \
	figures/bluetooth-disabled-symbolic.svg \
	figures/bluetooth-menu.png \
	figures/color-average.png \
	figures/color-camera.png \
	figures/color-display.png \
	figures/color-printer.png \
	figures/color-profile-default.png \
	figures/color-space.png \
	figures/display-dual-monitors.webm \
	figures/documents-icon.png \
	figures/emblem-system-symbolic.svg \
	figures/gnome.png \
	figures/go-down.png \
	figures/index-video-thumbnail-01.jpg \
	figures/index-video-thumbnail-02.jpg \
	figures/index-video-thumbnail-03.jpg \
	figures/input-keyboard-symbolic.png \
	figures/input-methods-switcher.png \
	figures/keyboard-key-menu.svg \
	figures/nautilus-3-10.png \
	figures/nautilus-icons.png \
	figures/network-cellular-3g-symbolic.svg \
	figures/network-cellular-4g-symbolic.svg \
	figures/network-cellular-acquiring-symbolic.svg \
	figures/network-cellular-connected-symbolic.svg \
	figures/network-cellular-edge-symbolic.svg \
	figures/network-cellular-gprs-symbolic.svg \
	figures/network-cellular-signal-excellent-symbolic.svg \
	figures/network-cellular-signal-good-symbolic.svg \
	figures/network-cellular-signal-none-symbolic.svg \
	figures/network-cellular-signal-ok-symbolic.svg \
	figures/network-cellular-signal-weak-symbolic.svg \
	figures/network-cellular-umts-symbolic.svg \
	figures/network-error-symbolic.svg \
	figures/network-idle-symbolic.svg \
	figures/network-no-route-symbolic.svg \
	figures/network-offline-symbolic.svg \
	figures/network-receive-symbolic.svg \
	figures/network-transmit-receive-symbolic.svg \
	figures/network-transmit-symbolic.svg \
	figures/network-vpn-acquiring-symbolic.svg \
	figures/network-vpn-symbolic.svg \
	figures/network-wired-acquiring-symbolic.svg \
	figures/network-wired-disconnected-symbolic.svg \
	figures/network-wired-symbolic.svg \
	figures/preferences-desktop-accessibility-symbolic.svg \
	figures/printing-select.png \
	figures/shell-activities-classic.png \
	figures/shell-activities.png \
	figures/shell-apps-open.png \
	figures/shell-appts-classic.png \
	figures/shell-appts.png \
	figures/shell-dash.png \
	figures/shell-exit-classic.png \
	figures/shell-exit.png \
	figures/shell-files.png \
	figures/shell-introduction.png \
	figures/shell-lock.png \
	figures/shell-message-tray.png \
	figures/shell-keyboard-shortcuts.png \
	figures/shell-notification.png \
	figures/shell-top-bar-classic.png \
	figures/shell-top-bar.png \
	figures/shell-window-list-classic.png \
	figures/shell-windows.png \
	figures/shell-workspaces.png \
	figures/shell.png \
	figures/top-bar-icons-classic.png \
	figures/top-bar-icons.png \
	figures/universal-access-menu.png \
	figures/view-fullscreen-16.png \
	figures/network-wireless-acquiring-symbolic.svg \
	figures/network-wireless-connected-symbolic.svg \
	figures/network-wireless-encrypted-symbolic.svg \
	figures/network-wireless-signal-excellent-symbolic.svg \
	figures/network-wireless-signal-good-symbolic.svg \
	figures/network-wireless-signal-none-symbolic.svg \
	figures/network-wireless-signal-ok-symbolic.svg \
	figures/network-wireless-signal-weak-symbolic.svg \
	figures/notification-buttons.png \
	figures/system-run-symbolic.svg \
	figures/view-more-symbolic.svg \
	figures/yelp-icon-big.png

HELP_FILES = \
	legal.xml \
	backup-frequency.page \
	backup-how.page \
	backup-restore.page \
	backup-what.page \
	backup-why.page \
	display-dual-monitors.page \
	documents-search.page \
	files-browse.page \
	files-copy.page \
	files-delete.page \
	files-preview.page \
	files-recover.page \
	files-removedrive.page \
	files-rename.page \
	files-share.page \
	files.page \
	hardware.page \
	index.page \
	keyboard-key-super.page \
	keyboard-layouts.page \
	keyboard.page \
	look-background.page \
	mouse-doubleclick.page \
	mouse-sensitivity.page \
	mouse.page \
	net-antivirus.page \
	net-email-virus.page \
	net-manual.page \
	net-security.page \
	net-slow.page \
	net-vpn-connect.page \
	net-wired-connect.page \
	net-wireless-adhoc.page \
	net-wireless-airplane.page \
	net-wireless-connect.page \
	net-wireless-disconnecting.page \
	net-wireless-find.page \
	net-wireless-hidden.page \
	net-wireless-noconnection.page \
	net-wireless-wepwpa.page \
	net-wireless.page \
	net.page \
	power-othercountry.page \
	prefs-display.page \
	prefs.page \
	printing-2sided.page \
	printing-cancel-job.page \
	printing-differentsize.page \
	printing-order.page \
	printing-select.page \
	printing-setup-default-printer.page \
	printing-setup.page \
	printing-to-file.page \
	printing.page \
	screen-shot-record.page \
	session-language.page \
	shell-apps-open.page \
	shell-exit.page \
	shell-introduction.page \
	shell-lockscreen.page \
	shell-overview.page \
	shell-windows-maximize.page \
	shell-windows-switching.page \
	tips.page \
	user-accounts.page \
	user-add.page \
	user-admin-change.page \
	user-admin-explain.page \
	user-admin-problems.page \
	user-autologin.page \
	user-changepassword.page \
	user-changepicture.page \
	user-delete.page \
	user-goodpassword.page

HELP_LINGUAS = as ca cs de el fi fr es gl gu hi hu id it ja kn lv mr nl pa pt_BR ru sl sr sr@latin sv te vi ta zh_CN
