@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = gnome-help

HELP_MEDIA = \
	figures/audio-volume-high-symbolic.svg \
	figures/audio-volume-low-symbolic.svg \
	figures/audio-volume-medium-symbolic.svg \
	figures/audio-volume-muted-symbolic.svg \
	figures/battery-caution-charging-symbolic.svg \
	figures/battery-caution-symbolic.svg \
	figures/battery-empty-charging-symbolic.svg \
	figures/battery-empty-symbolic.svg \
	figures/battery-full-charged-symbolic.svg \
	figures/battery-full-charging-symbolic.svg \
	figures/battery-full-symbolic.svg \
	figures/battery-good-charging-symbolic.svg \
	figures/battery-good-symbolic.svg \
	figures/battery-low-charging-symbolic.svg \
	figures/battery-low-symbolic.svg \
	figures/battery-missing-symbolic.svg \
	figures/bluetooth-active-symbolic.svg \
	figures/bluetooth-disabled-symbolic.svg \
	figures/bluetooth-menu.png \
	figures/color-average.png \
	figures/color-camera.png \
	figures/color-display.png \
	figures/color-printer.png \
	figures/color-profile-default.png \
	figures/color-space.png \
	figures/display-dual-monitors.webm \
	figures/documents-icon.png \
	figures/emblem-system-symbolic.svg \
	figures/eos-app-store-add-desktop.png \
	figures/eos-app-store-categories.png \
	figures/eos-app-store-tools.png \
	figures/eos-app-store-websites.png \
	figures/eos-browser-feedback.png \
	figures/eos-cc-a11y-icon.png \
	figures/eos-cc-a11y.png \
	figures/eos-cc-add-keyboard-layout.png \
	figures/eos-cc-auth-confirm.png \
	figures/eos-cc-auth.png \
	figures/eos-cc-background-back.png \
	figures/eos-cc-background-button.png \
	figures/eos-cc-background-select.png \
	figures/eos-cc-click-assist-setting.png \
	figures/eos-cc-click-assist-setting.png \
	figures/eos-cc-click-simulate.png \
	figures/eos-cc-contrast-example.png \
	figures/eos-cc-contrast-setting.png \
	figures/eos-cc-details.png \
	figures/eos-cc-displays.png \
	figures/eos-cc-keyboard.png \
	figures/eos-cc-language-accept.png \
	figures/eos-cc-language-restart.png \
	figures/eos-cc-language-select.png \
	figures/eos-cc-language-setting.png \
	figures/eos-cc-mouse.png \
	figures/eos-cc-network.png \
	figures/eos-cc-notifications.png \
	figures/eos-cc-online-accounts-add.png \
	figures/eos-cc-online-accounts-options.png \
	figures/eos-cc-online-accounts-type.png \
	figures/eos-cc-online-accounts.png \
	figures/eos-cc-osk-keyboard.png \
	figures/eos-cc-overscan.png \
	figures/eos-cc-printers.png \
	figures/eos-cc-region.png \
	figures/eos-cc-unlock.png \
	figures/eos-cc-user-add.png \
	figures/eos-cc-user-delete.png \
	figures/eos-cc-users.png \
	figures/eos-desktop-a11y-icon.png \
	figures/eos-desktop-app-store.png \
	figures/eos-desktop-browser-taskbar.png \
	figures/eos-desktop-browser.png \
	figures/eos-desktop-browser.png \
	figures/eos-desktop-delete-app.gif \
	figures/eos-desktop-delete-notification.png \
	figures/eos-desktop-documents.png \
	figures/eos-desktop-feedback.png \
	figures/eos-desktop-music.png \
	figures/eos-desktop-no-connection.png \
	figures/eos-desktop-notification.png \
	figures/eos-desktop-photos.png \
	figures/eos-desktop-right-click.png \
	figures/eos-desktop-search.png \
	figures/eos-desktop-settings.gif \
	figures/eos-desktop-social-bar-button.png \
	figures/eos-desktop-social-bar.png \
	figures/eos-desktop-sound.png \
	figures/eos-desktop-taskbar.png \
	figures/eos-desktop-update-notification.png \
	figures/eos-desktop-user-menu.png \
	figures/eos-desktop-wifi-list.png \
	figures/eos-desktop-wifi-switch.png \
	figures/eos-desktop.png \
	figures/eos-discovery-center-news.png \
	figures/eos-discovery-center.png \
	figures/eos-file-manager.png \
	figures/eos-icon-app-store-add-website.png \
	figures/eos-icon-app-store-close.png \
	figures/eos-icon-documents.png \
	figures/eos-icon-file-settings.png \
	figures/eos-icon-internet.png \
	figures/eos-icon-more-apps.png \
	figures/eos-icon-presentation.png \
	figures/eos-icon-socialbar.png \
	figures/eos-icon-spreadsheet.png \
	figures/eos-icon-user-menu.png \
	figures/eos-icon-writer.png \
	figures/eos-keyboard-alt-tab.png \
	figures/eos-keyboard-caps-lock.png \
	figures/eos-keyboard-ctrl-c.png \
	figures/eos-keyboard-ctrl-v.png \
	figures/eos-keyboard-ctrl-x.png \
	figures/eos-keyboard-escape.png \
	figures/eos-keyboard-menu.png \
	figures/eos-keyboard-print-screen.png \
	figures/eos-keyboard-super.png \
	figures/eos-photos-edit.gif \
	figures/eos-photos-facebook-message.png \
	figures/eos-photos-facebook.png \
	figures/eos-photos-open.png \
	figures/eos-photos-splash.png \
	figures/eos-printing-select-pages.png \
	figures/eos-screen-shot-capture.png \
	figures/eos-screen-shot-type.png \
	figures/eos-window-close.png \
	figures/eos-window-minimize.png \
	figures/eos-window-switcher.png \
	figures/eos-wired-connect.png \
	figures/gnome.png \
	figures/go-down.png \
	figures/input-keyboard-symbolic.png \
	figures/input-methods-switcher.png \
	figures/keyboard-key-menu.svg \
	figures/nautilus-3-10.png \
	figures/nautilus-icons.png \
	figures/network-cellular-3g-symbolic.svg \
	figures/network-cellular-4g-symbolic.svg \
	figures/network-cellular-acquiring-symbolic.svg \
	figures/network-cellular-connected-symbolic.svg \
	figures/network-cellular-edge-symbolic.svg \
	figures/network-cellular-gprs-symbolic.svg \
	figures/network-cellular-signal-excellent-symbolic.svg \
	figures/network-cellular-signal-good-symbolic.svg \
	figures/network-cellular-signal-none-symbolic.svg \
	figures/network-cellular-signal-ok-symbolic.svg \
	figures/network-cellular-signal-weak-symbolic.svg \
	figures/network-cellular-umts-symbolic.svg \
	figures/network-error-symbolic.svg \
	figures/network-idle-symbolic.svg \
	figures/network-no-route-symbolic.svg \
	figures/network-offline-symbolic.svg \
	figures/network-receive-symbolic.svg \
	figures/network-transmit-receive-symbolic.svg \
	figures/network-transmit-symbolic.svg \
	figures/network-vpn-acquiring-symbolic.svg \
	figures/network-vpn-symbolic.svg \
	figures/network-wired-acquiring-symbolic.svg \
	figures/network-wired-disconnected-symbolic.svg \
	figures/network-wired-symbolic.svg \
	figures/preferences-desktop-accessibility-symbolic.svg \
	figures/printing-select.png \
	figures/shell-activities-classic.png \
	figures/shell-activities.png \
	figures/shell-apps-open.png \
	figures/shell-appts-classic.png \
	figures/shell-appts.png \
	figures/shell-dash.png \
	figures/shell-exit-classic.png \
	figures/shell-exit.png \
	figures/shell-files.png \
	figures/shell-introduction.png \
	figures/shell-lock.png \
	figures/shell-message-tray.png \
	figures/shell-keyboard-shortcuts.png \
	figures/shell-notification.png \
	figures/shell-top-bar-classic.png \
	figures/shell-top-bar.png \
	figures/shell-window-list-classic.png \
	figures/shell-windows.png \
	figures/shell-workspaces.png \
	figures/shell.png \
	figures/top-bar-icons-classic.png \
	figures/top-bar-icons.png \
	figures/universal-access-menu.png \
	figures/view-fullscreen-16.png \
	figures/network-wireless-acquiring-symbolic.svg \
	figures/network-wireless-connected-symbolic.svg \
	figures/network-wireless-encrypted-symbolic.svg \
	figures/network-wireless-signal-excellent-symbolic.svg \
	figures/network-wireless-signal-good-symbolic.svg \
	figures/network-wireless-signal-none-symbolic.svg \
	figures/network-wireless-signal-ok-symbolic.svg \
	figures/network-wireless-signal-weak-symbolic.svg \
	figures/notification-buttons.png \
	figures/system-run-symbolic.svg \
	figures/view-more-symbolic.svg \
	figures/yelp-icon-big.png

HELP_FILES = \
	legal.xml \
	a11y-bouncekeys.page \
	a11y-braille.page \
	a11y-contrast.page \
	a11y-dwellclick.page \
	a11y-font-size.page \
	a11y-icon.page \
	a11y-mag.page \
	a11y-right-click.page \
	a11y-screen-reader.page \
	a11y-slowkeys.page \
	a11y-stickykeys.page \
	a11y-visualalert.page \
	a11y.page \
	accounts-add.page \
	backup-check.page \
	backup-frequency.page \
	backup-how.page \
	backup-restore.page \
	backup-what.page \
	backup-where.page \
	backup-why.page \
	bluetooth-connect-device.page \
	bluetooth-problem-connecting.page \
	bluetooth-remove-connection.page \
	bluetooth-send-file.page \
	bluetooth-turn-on-off.page \
	bluetooth.page \
	clock-set.page \
	clock-timezone.page \
	display-dual-monitors.page \
	files-browse.page \
	files-copy.page \
	files-delete.page \
	files-microsoft-compatible.page \
	files-open.page \
	files-preview.page \
	files-recover.page \
	files-removedrive.page \
	files-rename.page \
	files-save.page \
	files-search.page \
	files-share.page \
	files-zip.page \
	files.page \
	hardware.page \
	index.page \
	keyboard-cursor-blink.page \
	keyboard-es-accent.page \
	keyboard-key-menu.page \
	keyboard-key-super.page \
	keyboard-layouts.page \
	keyboard-nav.page \
	keyboard-osk.page \
	keyboard-repeat-keys.page \
	keyboard.page \
	look-background.page \
	media-import-from-device.page \
	media-listen-music.page \
	media-play-videos.page \
	mouse-doubleclick.page \
	mouse-mousekeys.page \
	mouse-sensitivity.page \
	mouse-when-right-click.page \
	mouse.page \
	nautilus-file-properties-basic.page \
	nautilus-file-properties-permissions.page \
	net-3g-dongles.page \
	net-antivirus.page \
	net-create-email.page \
	net-discover-websites.page \
	net-email-virus.page \
	net-installing-other-browsers.page \
	net-manual.page \
	net-read-news.page \
	net-slow.page \
	net-social-bar.page \
	net-troubleshoot.page \
	net-wired-connect.page \
	net-wireless-adhoc.page \
	net-wireless-connect.page \
	net-wireless-disconnecting.page \
	net-wireless-find.page \
	net-wireless-hidden.page \
	net-wireless-noconnection.page \
	net-wireless-wepwpa.page \
	net.page \
	printing-2sided.page \
	printing-cancel-job.page \
	printing-differentsize.page \
	printing-from-applications.page \
	printing-order.page \
	printing-select.page \
	printing-setup-default-printer.page \
	printing-setup.page \
	printing-supported.page \
	printing-to-file.page \
	privacy-screen-lock.page \
	screen-shot-record.page \
	security-and-privacy.page \
	security-data-collection.page \
	security-guard-privacy.page \
	security-understand-password.page \
	session-language.page \
	sharing-bluetooth.page \
	sharing-media.page \
	shell-add-desktop-folder.page \
	shell-apps-close.page \
	shell-apps-open.page \
	shell-delete-app-desktop.page \
	shell-download-media.page \
	shell-exit.page \
	shell-install-ext-apps.page \
	shell-introduction.page \
	shell-keyboard-shortcuts.page \
	shell-notifications.page \
	shell-organize-apps.page \
	shell-overview.page \
	shell-update-app.page \
	shell-update-system.page \
	shell-windows-hide.page \
	shell-windows-maximize.page \
	shell-windows-states.page \
	shell-windows-switching.page \
	sound-alert.page \
	sound-volume.page \
	user-add.page \
	user-admin-change.page \
	user-admin-explain.page \
	user-admin-problems.page \
	user-autologin.page \
	user-changepassword.page \
	user-changepicture.page \
	user-delete.page \
	user-goodpassword.page

HELP_LINGUAS = es
